# cwidget

./: Doxyfile.in  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  cwidget-config.h  cwidget-config.h.in  cwidget.pc.in
debian/: changelog  control  libcwidget-dev.install  libcwidget-doc.doc-base  libcwidget-doc.links  libcwidget0.install  libcwidget3.install  rules  watch
debian/patches/: 0001-Change-gettext-domainname-to-libcwidget4-1.patch  bug-897733-fix-ftbfs-gcc-8.patch  fix-FTBFS-with-libncursesw6.patch  series
debian/tests/: compile-example-testcwidget
debian/upstream/: metadata
doc/: Makefile.am  Makefile.in  ikiwiki.setup
doc/ikiwiki/: documentation.mdwn  index.mdwn  local.css  sidebar.mdwn
doc/ikiwiki/documentation/: contributing.mdwn  downloading.mdwn  installing.mdwn  using.mdwn
m4/: ChangeLog
po/: ChangeLog  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  ar.gmo  ar.po  ast.gmo  ast.po  bs.gmo  bs.po  ca.gmo  ca.po  cs.gmo  cs.po  cwidget.pot  da.gmo  da.po  de.gmo  de.po  dz.gmo  dz.po  el.gmo  el.po  es.gmo  es.po  eu.gmo  eu.po  fi.gmo  fi.po  fr.gmo  fr.po  gl.gmo  gl.po  hr.gmo  hr.po  hu.gmo  hu.po  it.gmo  it.po  (+47 more)
src/: Makefile.am  Makefile.in
src/cwidget/: Makefile.am  Makefile.in  README.layout  columnify.cc  columnify.h  curses++.cc  curses++.h  dialogs.cc  dialogs.h  fragment.cc  fragment.h  fragment_cache.cc  fragment_cache.h  fragment_contents.h  style.cc  style.h  testcwidget.cc  toplevel.cc  toplevel.h
src/cwidget/config/: Makefile.am  Makefile.in  colors.cc  colors.h  column_definition.cc  column_definition.h  keybindings.cc  keybindings.h
src/cwidget/generic/: Makefile.am  Makefile.in
src/cwidget/generic/threads/: Makefile.am  Makefile.in  event_queue.h  threads.cc  threads.h
src/cwidget/generic/util/: Makefile.am  Makefile.in  bool_accumulate.h  eassert.cc  eassert.h  exception.cc  exception.h  i18n.h  ref_ptr.h  slotarg.h  ssprintf.cc  ssprintf.h  strhash.h  transcode.cc  transcode.h
src/cwidget/widgets/: Makefile.am  Makefile.in  bin.cc  bin.h  button.cc  button.h  center.cc  center.h  container.cc  container.h  editline.cc  editline.h  frame.cc  frame.h  label.cc  label.h  layout_item.cc  layout_item.h  menu.cc  menu.h  menubar.cc  menubar.h  minibuf_win.cc  minibuf_win.h  multiplex.cc  multiplex.h  pager.cc  pager.h  passthrough.cc  passthrough.h  radiogroup.cc  radiogroup.h  scrollbar.cc  scrollbar.h  size_box.cc  size_box.h  stacked.cc  stacked.h  staticitem.cc  staticitem.h  (+17 more)
tests/: Makefile.am  Makefile.in  test_eassert.cc  test_ssprintf.cc  test_threads.cc
