MAINTAINERCLEANFILES=Makefile.in
INCLUDES = -Wall @WERROR@ -I$(top_srcdir)/src
noinst_LTLIBRARIES=libwidgets.la

widgetsincludedir = $(pkgincludedir)/widgets
widgetsinclude_HEADERS = \
	button.h	\
	bin.h		\
	center.h	\
	container.h	\
	editline.h	\
	menu.h		\
	layout_item.h	\
	label.h		\
	frame.h		\
	statuschoice.h	\
	scrollbar.h	\
	passthrough.h	\
	pager.h		\
	multiplex.h	\
	minibuf_win.h	\
	menubar.h	\
	widget.h	\
	tree.h		\
	table.h		\
	treeitem.h	\
	transient.h	\
	togglebutton.h	\
	subtree.h	\
	text_layout.h	\
	staticitem.h	\
	size_box.h	\
	stacked.h	\
	radiogroup.h	\
	statuschoice.h	\
	scrollbar.h	\
	passthrough.h	\
	pager.h		\
	multiplex.h	\
	minibuf_win.h	\
	menubar.h

libwidgets_la_SOURCES = \
	button.cc	\
	bin.cc		\
	center.cc	\
	container.cc	\
	editline.cc	\
	frame.cc	\
	label.cc	\
	layout_item.cc	\
	menu.cc		\
	menubar.cc	\
	minibuf_win.cc	\
	multiplex.cc	\
	pager.cc	\
	passthrough.cc	\
	scrollbar.cc	\
	statuschoice.cc	\
	radiogroup.cc	\
	size_box.cc	\
	stacked.cc	\
	staticitem.cc	\
	text_layout.cc	\
	togglebutton.cc	\
	transient.cc	\
	treeitem.cc	\
	table.cc	\
	tree.cc		\
	widget.cc
