MAINTAINERCLEANFILES=Makefile.in
AM_CPPFLAGS = -Wall @WERROR@ -I$(top_srcdir)/src
noinst_LTLIBRARIES=libwidgets.la

widgetsincludedir = $(pkgincludedir)/widgets
widgetsinclude_HEADERS = \
	bin.h		\
	button.h	\
	center.h	\
	container.h	\
	editline.h	\
	frame.h		\
	label.h		\
	layout_item.h	\
	menu.h		\
	menubar.h	\
	minibuf_win.h	\
	multiplex.h	\
	pager.h		\
	passthrough.h	\
	radiogroup.h	\
	scrollbar.h	\
	size_box.h	\
	stacked.h	\
	staticitem.h	\
	statuschoice.h	\
	subtree.h	\
	table.h		\
	text_layout.h	\
	togglebutton.h	\
	transient.h	\
	tree.h		\
	treeitem.h	\
	widget.h

libwidgets_la_SOURCES = \
	bin.cc		\
	button.cc	\
	center.cc	\
	container.cc	\
	editline.cc	\
	frame.cc	\
	label.cc	\
	layout_item.cc	\
	menu.cc		\
	menubar.cc	\
	minibuf_win.cc	\
	multiplex.cc	\
	pager.cc	\
	passthrough.cc	\
	radiogroup.cc	\
	scrollbar.cc	\
	size_box.cc	\
	stacked.cc	\
	staticitem.cc	\
	statuschoice.cc	\
	table.cc	\
	text_layout.cc	\
	togglebutton.cc	\
	transient.cc	\
	tree.cc		\
	treeitem.cc	\
	widget.cc
